# enph253-cv

./: README.md
cv-dev/cv-testing/: .gitignore  CMakeLists.txt  CMakePresets.json
cv-dev/cv-testing/cmake/: rpi-toolchain.cmake
cv-dev/cv-testing/include/: camera.hpp  frame-source.hpp  teletubby-detector.hpp
cv-dev/cv-testing/scripts/: build-on-pi.sh  deploy-to-pi.ps1
cv-dev/cv-testing/src/: camera.cpp  frame-source.cpp  main.cpp  teletubby-detector.cpp
cv-dev/cv-testing/test-images/: .gitkeep
cv-dev/training/: .gitignore  README.md  convert_heic.py  download_dataset.py  export_onnx.py  extract_frames.py  requirements.txt  train.py
cv-dev/training/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml  data.yaml.example
cv-dev/training/dataset/test/labels/: IMG_0869_jpg.rf.APbJA5XpPPPK7C6bPac1.txt  IMG_0885_jpg.rf.Xe8FgSjs186wFYefSMJs.txt  IMG_0891_jpg.rf.BUGNhl7sBhiDapeDwnt5.txt  IMG_0898_jpg.rf.YqgJVIyQCrnt4YDS1oZd.txt  IMG_0919_jpg.rf.8eid5TNwNwTrBqcZUbMW.txt  IMG_0936_jpg.rf.JfCqM8iFFA42bVOR9wDK.txt  IMG_0940_jpg.rf.WfxgM7KzBYULrqNW4l22.txt  IMG_0964_jpg.rf.tXkzUdemEqs7tS6gULxL.txt  IMG_0967_jpg.rf.8A3x7fOFySgqfHi3hhBp.txt  IMG_1592_000380_jpg.rf.9k9MgoyQlYDRrnjp9tyx.txt  IMG_1593_000130_jpg.rf.N6O3wtLALcMHztLfLubC.txt  IMG_1593_000140_jpg.rf.nLFavO6X26aqktgSePOu.txt  IMG_1594_000060_jpg.rf.qw3GxxyN41LQBOAVrrgk.txt  IMG_1594_000080_jpg.rf.JIePCYCjVXGqxR497wCP.txt  IMG_1594_000150_jpg.rf.llmc66m2lq4NmmJOelEI.txt  IMG_1595_000100_jpg.rf.DsSMsYDrMHobstqmg4xi.txt  IMG_1595_000190_jpg.rf.IfPvLTOy2mXO3WgIpGVy.txt  IMG_1596_000060_jpg.rf.xmjlzsjCGAiuCY96OtTP.txt  IMG_1598_000380_jpg.rf.CRGlgOV1qA4xGDZjwFYe.txt  IMG_1598_000740_jpg.rf.9tGXlkh403dWJU33xRv5.txt  IMG_1598_000820_jpg.rf.Wqzrxol0gir0ZIfhWZCA.txt  IMG_1598_000880_jpg.rf.uin6UrcJuwdfluJ6Nl8o.txt  IMG_1598_000990_jpg.rf.5cRktDJwzCuAk6OPA6KU.txt  IMG_1598_001110_jpg.rf.lDBMrRvadGZ2ciTyoo9F.txt  IMG_1598_001300_jpg.rf.p9XupQhpUKhPtqlkeufL.txt  IMG_1598_001320_jpg.rf.IxhjyFqk3dlYfPNRmxng.txt  IMG_1598_001350_jpg.rf.3NItM5o1T40tgkjRKze7.txt  (+1 more)
cv-dev/training/dataset/train/: labels.cache
cv-dev/training/dataset/valid/: labels.cache
(+296 files in other folders)
